fix contrast <a>

--- a/css/mescss/typography.css
+++ b/css/mescss/typography.css
@@ -232,3 +232,7 @@ input[type=submit] {
 .autres-projets .carousel {
     background-color: #161616;
 }
+
+.contrast {
+    text-shadow: 1px 1px 10px #3D332D;
+}
